@@ -427,6 +427,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7233: Fix a number of two-argument Decimal methods to make sure
+  that they accept an int or long as the second argument.
+
 - Issue #4750: Store the basename of the original filename in the gzip FNAME
   header as required by RFC 1952.
 
